dev/vm/k8s/platform/security/allow-linkerd-control-plane.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkerd-control-plane
  namespace: apps
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd
      ports:
        - protocol: TCP
          port: 8080   # identity
        - protocol: TCP
          port: 8086   # destination
        - protocol: TCP
          port: 8090   # policy
