dev/vm/k8s/platform/security/apps-egress-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-kafka
  namespace: apps
spec:
  podSelector: { }   # all apps pods
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: messaging
          podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
