dev/vm/k8s/platform/security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: apps
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
